# mlproject

./: README.md  config.yml  main.py  pyproject.toml
data/0_external/: CPI_G7.csv  GEPU_world.csv  WHO-COVID-19-global-data.csv  imf-dm-export-20240919.xls  meteo.xlsx
data/0_external/Functions for participants/: Functions for participants.py
data/1_serialized/: CPI.parquet  GEPU.parquet  covid.parquet  price.parquet  sales.parquet  weather.parquet
data/4_raw/: Submission Phase 1 - CDLB.csv
exploratory_analysis/: eda.py
src/: mlflow.py
src/cdlb_logger/: pyproject.toml
src/cdlb_logger/cdlb_logger/: logger.py
src/data/: get_data.py  merge_data.py
src/features/: add_features.py  encoding.py  imputation.py
src/models/: cross_validation.py  finetuning.py  models.py  score.py
src/visualisation/: visualise.py
steps/: load.py  split.py  train.py
tests/: __init__.py
