[project]
name = "cdlb-logger"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "CharlesDLB", email = "79206682+CharlesDLB@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
cdlb-logger = "cdlb_logger:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
